fixed small typo in choose an option

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <input label="search" type="text">
         </div>
         <div>
-            <span>Chose and Option.</span>
+            <span>Choose an option</span>
             <select id="nav-bar-options">
                 <option value="">option 1</option>
                 <option value="">option 2</option>
